加入自己的几处修改

--- a/layout/_partial/index.ejs
+++ b/layout/_partial/index.ejs
@@ -13,7 +13,7 @@
     <% post.tags.forEach(function(tag, index) { %>
       <a href='<%= config.root + tag.path %>'><%= tag.name %></a> 
     <% }); %>
-    </saan>
+    </span>
   <% } %>
   </h3>
 </section>
