--- a/layout/_partial/follow.ejs
+++ b/layout/_partial/follow.ejs
@@ -21,4 +21,6 @@
     <a href="<%- theme.rss%>"><i class="fa fa-rss-square fa-2x"></i></a>
   <% } -%>
 </div>
+<h6><a href="<%- config.root %>archives">Archives</a></h6>
 <h6><a href="<%- config.root %>about">About</a></h6>
+<%- search_form({text:''}) %>
