替换英文到正体中文，增加表格样式

--- a/layout/_partial/follow.ejs
+++ b/layout/_partial/follow.ejs
@@ -21,6 +21,6 @@
     <a href="<%- theme.rss%>"><i class="fa fa-rss-square fa-2x"></i></a>
   <% } -%>
 </div>
-<h6><a href="<%- config.root %>archives">Archives</a></h6>
-<h6><a href="<%- config.root %>about">About</a></h6>
+<h6><a href="<%- config.root %>archives">歸檔</a></h6>
+<h6><a href="<%- config.root %>about">關於</a></h6>
 <%- search_form({text:''}) %>
