--- a/layout/_partial/index.ejs
+++ b/layout/_partial/index.ejs
@@ -19,7 +19,7 @@
 </section>
 <% }); %>
 <nav class="pagination" role="pagination">
-  <% if (page.prev) { %><a class="newer-posts" href="<%- url_for(page.prev_link) %>">← Newer Posts</a><% } %>
-  <span class="page-number">Page <%- page.current %> of <%- page.total %></span>
-  <% if (page.next) { %><a class="older-posts" href="<%- url_for(page.next_link) %>">Older Posts →</a><% } %>
+  <% if (page.prev) { %><a class="newer-posts" href="<%- url_for(page.prev_link) %>">← 新</a><% } %>
+  <span class="page-number"><%- page.current %>/<%- page.total %></span>
+  <% if (page.next) { %><a class="older-posts" href="<%- url_for(page.next_link) %>">舊 →</a><% } %>
 </nav>
