--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -56,7 +56,7 @@
         <%- body %>
         </main>
         <footer id="footer">
-            <section id="footer-message">&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>. All rights reserved. Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>. <a href="https://github.com/guolin/crisp-hexo-theme" target="_blank">crisp</a> theme by <a href="guolin.github.io" target="_blank">Guo Lin</a>.</section>
+            <section id="footer-message">&copy; <%= config.since %> - <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>. All rights reserved.</section>
         </footer><% if (theme.google_analytics) { %>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -66,6 +66,7 @@
             ga('create', '<%- theme.google_analytics %>', 'auto');
             ga('send', 'pageview');
         </script><% } %>
+        <script type="text/javascript" src="http://tajs.qq.com/stats?sId=61071954" charset="UTF-8"></script>
     </body>
 </html>
 
