--- a/source/styles/crisp.css
+++ b/source/styles/crisp.css
@@ -555,7 +555,7 @@ figure.highlight,
     width: 100%; }
     figure.highlight .code pre,
     .codeblock .code pre {
-      max-width: 700px;
+      /* max-width: 700px; */
       overflow-x: auto;
       overflow-y: hidden; }
   figure.highlight .line,
