--- a/source/styles/crisp.css
+++ b/source/styles/crisp.css
@@ -23,8 +23,7 @@
 }
 @font-face {
   	font-family: 'FZBeiWeiKaiShu';
-    src: url('../fonts/FZBeiWeiKaiShu.ttf') format('truetype'),
-         url('../fonts/FZBeiWeiKaiShu-full.ttf') format('truetype');
+    src: url('../fonts/FZBeiWeiKaiShu.ttf') format('truetype');
 }
 
 html, body {
