--- a/source/styles/crisp.css
+++ b/source/styles/crisp.css
@@ -71,7 +71,7 @@ p, hr, h4, h5, h6 {
 }
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-	font-family: "FZBeiWeiKaiShu", "Bree Serif", "Open Sans", Arial, "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", serif;
+    font-family: "FZBeiWeiKaiShu", "Bree Serif", "Open Sans", Arial, "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", serif;
 	font-weight: 400 !important;
 }
 h1 {
@@ -101,6 +101,12 @@ h5 {
 h6 {
 	font-size:1.1em;
 }
+
+.post h2, .post h3, .post h4, .post h5, .post h6, .post p, .post li {
+	font-family: "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
+}
+
+
 /* Page Elements */
 img, iframe {
 	max-width: 100%;
@@ -122,7 +128,7 @@ strong {
 blockquote {
 	border-left: 0.4em solid #eee;
 	padding-left: 1.2em;
-	font-size: 1.3em;
+	font-size: 1em;
 }
 hr{
  	border: 0;
