--- a/source/styles/crisp.css
+++ b/source/styles/crisp.css
@@ -29,7 +29,7 @@
 html, body {
 	font-size: 1em;
 	line-height: 1.65em;
-	font-family: "FZBeiWeiKaiShu", "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
+	font-family: "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
 	font-weight: 300;
 	color:#444;
 }
@@ -71,7 +71,7 @@ p, hr, h4, h5, h6 {
 }
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-    font-family: "FZBeiWeiKaiShu", "Bree Serif", "Open Sans", Arial, "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", serif;
+    font-family: "Bree Serif", "Open Sans", Arial, "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", serif;
 	font-weight: 400 !important;
 }
 h1 {
@@ -102,8 +102,8 @@ h6 {
 	font-size:1.1em;
 }
 
-.post h2, .post h3, .post h4, .post h5, .post h6, .post p, .post li {
-	font-family: "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
+.post h1, .post-title, #header, #header h1, #header h6, .pagination {
+	font-family: "FZBeiWeiKaiShu", "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
 }
 
 
