--- a/source/styles/crisp.css
+++ b/source/styles/crisp.css
@@ -29,7 +29,7 @@
 html, body {
 	font-size: 1em;
 	line-height: 1.65em;
-	font-family: "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
+	font-family: Menlo,"Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
 	font-weight: 300;
 	color:#444;
 }
@@ -103,7 +103,7 @@ h6 {
 }
 
 .post h1, .post-title, #header, #header h1, #header h6, .pagination {
-	font-family: "FZBeiWeiKaiShu", "Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
+	font-family: "FZBeiWeiKaiShu",Menlo,"Open Sans",Arial,"Hiragino Sans GB","Microsoft YaHei","微软雅黑","STHeiti","WenQuanYi Micro Hei",SimSun,sans-serif;
 }
 
 
